# lacrei-api

./: .env.example  .gitignore  DECISIONS.md  Dockerfile  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: ci-cd.yml  pr-checks.yml  rollback.yml
apps/appointments/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/appointments/migrations/: 0001_initial.py
apps/core/: authentication.py  exceptions.py  logging.py  middleware.py  pagination.py  sanitizers.py
apps/core/urls/: auth.py  health.py
apps/professionals/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/professionals/fixtures/: initial_professionals.json
apps/professionals/migrations/: 0001_initial.py
config/: urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  staging.py  test.py
docker/: entrypoint.sh
docker/postgres/: init.sql
docs/: assas_integration.py
tests/: conftest.py  factories.py  test_appointments.py  test_health_security.py  test_professionals.py
