[tool.poetry]
name = "lacrei-saude-api"
version = "1.0.0"
description = "API RESTful de Gerenciamento de Consultas Médicas - Lacrei Saúde"
authors = ["Lacrei Saúde <dev@lacreisaude.com.br>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.15"
psycopg2-binary = "^2.9"
python-decouple = "^3.8"
djangorestframework-simplejwt = "^5.3"
django-cors-headers = "^4.3"
drf-spectacular = "^0.27"
django-filter = "^24.1"
gunicorn = "^22.0"
whitenoise = "^6.7"
sentry-sdk = {extras = ["django"], version = "^2.0"}
django-ratelimit = "^4.1"
bleach = "^6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-django = "^4.8"
pytest-cov = "^5.0"
factory-boy = "^3.3"
faker = "^24.0"
black = "^24.0"
ruff = "^0.3"
mypy = "^1.9"
django-stubs = "^5.0"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=apps --cov-report=term-missing --cov-report=xml"

[tool.mypy]
python_version = "3.11"
django_settings_module = "config.settings.base"
plugins = ["mypy_django_plugin.main"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
